fix (app): added vr9 idget and fixed styles on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -65,7 +65,10 @@ body {
 }
 
 .app {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 .app-head {
   position: relative;
@@ -88,7 +91,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
 .form {
   position: relative;
@@ -103,10 +105,19 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    gap: 15px;
+  }
 }
 .form__field {
   display: inline-flex;
   position: relative;
+
+  @media screen and (max-width: 767px) {
+    width: 100%
+  }
 }
 .form__field input {
   width: 100%;
@@ -169,6 +180,12 @@ body {
   margin-right: 10px;
 }
 
+.form__btn {
+  @media screen and (max-width: 767px) {
+    width: 100%
+  }
+}
+
 .spinner {
   width: 18px;
   height: 18px;
@@ -183,6 +200,13 @@ body {
 
 .hidden {
   display: none;
+}
+
+.footer {
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 @keyframes spin {
